--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_API_URL=https://usermgt.inflwuenza.com/v1
+NEXT_PUBLIC_API_URL_USERMGT=https://usermgt.inflwuenza.com/v1
+NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
+
 
