--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
+    "react-share": "^5.1.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "timeago-react": "^3.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
