change base url

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,7 @@
-NEXT_PUBLIC_API_URL_USERMGT=https://usermgt.inflwuenza.com/v1
-NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
+# NEXT_PUBLIC_API_URL_USERMGT=https://usermgt.inflwuenza.com/v1
+# NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
+
+NEXT_PUBLIC_API_URL_USERMGT=https://auth.ishot-it.com/v1
+NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.ishot-it.com/v1 
 
 
