--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,9 @@
-NEXT_PUBLIC_API_URL_USERMGT=https://auth.ishot-it.com/v1
-NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.ishot-it.com/v1 
+# NEXT_PUBLIC_API_URL_USERMGT=https://auth.ishot-it.com/v1
+# NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.ishot-it.com/v1 
+
+# NEXT_PUBLIC_API_URL_USERMGT=https://usermgt.inflwuenza.com/v1
+# NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
+
+NEXT_PUBLIC_API_URL_USERMGT=https://auth.inflwuenza.com/v1 
+NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
 
