fix callback url

--- a/.env.production
+++ b/.env.production
@@ -6,4 +6,5 @@
 
 NEXT_PUBLIC_API_URL_USERMGT=https://auth.inflwuenza.com/v1 
 NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
+NEXT_PUBLIC_API_ISHOTIT=https://ishot-it.com
 
