--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,7 @@
 
 NEXT_PUBLIC_API_URL_USERMGT=https://auth.inflwuenza.com/v1 
 NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.inflwuenza.com/v1
+NEXT_PUBLIC_API_ISHOTIT=http://localhost:3000
 
 # NEXT_PUBLIC_API_URL_USERMGT=https://auth.ishot-it.com/v1
 # NEXT_PUBLIC_API_URL_NEWSMGT=https://newsmgt.ishot-it.com/v1 
